# vpn-selling-api

./: .env.example  README.md  pyproject.toml
alembic/versions/: 2023012924_generate_payment_tariff_subscription__2ec75b12b150.py
app/: constants.py
app/api/: api.py  deps.py
app/api/endpoints/: tariff.py  user.py
app/models/: __init__.py  base.py  payment.py  subscription.py  tariff.py  user.py  vpn_server.py
app/schemas/: base.py  tariff.py  user.py
